fix(ui): fix a visual bug where the github icon will not move out of the way, instead it would hibde behind main content window. Set default value of show header to false.

--- a/styles/FloatingActionButton.css
+++ b/styles/FloatingActionButton.css
@@ -103,7 +103,7 @@
   border-radius: 50px;
   padding: 4px;
   border: 1px solid rgba(255, 255, 255, 0.1);
-  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.404);
   display: flex;
   gap: 4px;
 }
